--- a/src/component/css/FileList.css
+++ b/src/component/css/FileList.css
@@ -2,12 +2,29 @@
   height: 20px;
   aspect-ratio: 1/1;
   cursor: pointer;
+  border-radius: 3px;
+  display: flex;
+
+  justify-content: center;
+
+  align-items: center;
+}
+
+.plus_Folder_File:hover {
+  background-color: rgb(63, 63, 63);
 }
 
 .plus_Folder_File_img {
-  height: 100%;
-  width: 100%;
+  height: 90%;
+  width: 90%;
   object-fit: cover;
   overflow: hidden;
   flex-shrink: 0;
+}
+
+.FileList {
+  width: 90%;
+  margin-top: 20px;
+  height: 60%;
+  color: white;
 }
