Feat :: 파일당 Title, Content 벼랙 할당 ( 저장 X )
아직 저장 못함

--- a/src/component/css/MainPage.css
+++ b/src/component/css/MainPage.css
@@ -12,11 +12,10 @@ html,
   height: 100vh;
   grid-template-columns: 270px 1fr;
   grid-template-rows: 40px 1fr;
-  overflow: hidden;
 
   grid-template-areas:
-    "sidebar header"
-    "sidebar body";
+    'sidebar header'
+    'sidebar body';
 }
 
 .sidebar {
@@ -28,6 +27,7 @@ html,
 }
 .body {
   grid-area: body;
+  overflow-y: hidden;
 }
 
 .sidebar_cell {
